# mcp-structure-pj

./: .env  .env.example  .gitignore  CHANGELOG_v2.0.md  CODE_OPTIMIZATION_REPORT.md  GUI_使用说明.md  GUI更新说明.md  LICENSE  Makefile  README.md  api_server.py  check_yunwu_models.py  cleanup_repo.sh  cli.py  cli_generator.py  content_generator_gui.py  content_generator_gui_dark.py  debug_api_response.py  demo_anti_censorship.py  demo_anti_hallucination.py  demo_complete_image_generation.py  demo_content_20250911_150636.json  demo_content_20250911_150636.txt  demo_generator.py  demo_integrated_content_factory.py  demo_optimized.py  docker-compose.yml  enhanced_anti_censorship_test.py  examples.py  export_readable_articles.py  filter_thinking_content.py  fix_claude_api.py  generate_complete_articles.py  gui_config.py  health_check.py  integrated_anti_censorship_test.py  optimized_result_20250811_205318.json  optimized_result_20250811_211302.json  pyproject.toml  quick_image_test.py  (+29 more)
.claude/skills/: generate-content.md  quality-audit.md  research-topic.md  video-prompt.md
docs/: ai_video_prompt_guide.md  anti-hallucination.md  deep-research-integration.md  deep_truth_content_summary.md  image-generation-guide-v1.1.md  image-generation-guide.md
research_report/: feedback.md  info_mining.md  text-to-image-keyword-research.md
scripts/: diagnose_api_env.py
src/content_factory/: __init__.py
src/content_factory/agents/: __init__.py  base.py  flux_image_agent.py  image_agent.py  research_agent.py  scorer_agent.py  seedance_agent.py  video_agent.py  writer_agent.py
src/content_factory/core/: __init__.py  anti_censorship_system.py  content_pipeline.py  master_controller.py  openai_client.py  task_manager.py
src/content_factory/engines/: deep_research_engine.py  rag_engine.py
src/content_factory/models/: __init__.py  content.py  task.py
src/content_factory/prompts/: case_framework_prompts.py
src/content_factory/utils/: __init__.py  anti_hallucination.py  enhanced_prompts.py  persona_optimizer.py  platform_config.py  platform_specific_prompts.py  quality_metrics.py  text_to_image.py  user_persona.py
